set(LIBRARY_TARGET_NAME ${PROJECT_NAME})

file(GLOB_RECURSE ${LIBRARY_TARGET_NAME}_SRC src/*.cpp)

file(GLOB_RECURSE ${LIBRARY_TARGET_NAME}_HDR include/REmatch/*.hpp)
add_library(${LIBRARY_TARGET_NAME} ${${LIBRARY_TARGET_NAME}_SRC} ${${LIBRARY_TARGET_NAME}_HDR} ${REMATCH_SRC} ${REMATCH_HDR})

target_link_libraries(${LIBRARY_TARGET_NAME} PRIVATE antlr4_static)

add_library(${PROJECT_NAME}::${LIBRARY_TARGET_NAME} ALIAS ${LIBRARY_TARGET_NAME})

set_target_properties(${LIBRARY_TARGET_NAME} PROPERTIES
                     VERSION ${${PROJECT_NAME}_VERSION}
                     PUBLIC_HEADER "${${LIBRARY_TARGET_NAME}_HDR}")

target_include_directories(${LIBRARY_TARGET_NAME} PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:$<INSTALL_PREFIX>/${INSTALL_INCLUDE}>
)

if(NOT SKBUILD)
    install(TARGETS       ${LIBRARY_TARGET_NAME}
            EXPORT        ${PROJECT_NAME}
            LIBRARY       DESTINATION ${INSTALL_LIB}                            COMPONENT shlib
            ARCHIVE       DESTINATION ${INSTALL_LIB}                            COMPONENT lib
            PUBLIC_HEADER DESTINATION ${INSTALL_INCLUDE}/${LIBRARY_TARGET_NAME} COMPONENT dev)
endif()

